--- a/values.yaml
+++ b/values.yaml
@@ -987,7 +987,7 @@ dags:
     # git@github.com:apache/airflow.git
     # https example: https://github.com/apache/airflow.git
     repo: https://github.com/rootstrap/medical-pipeline.git
-    branch: k8
+    branch: main
 
     rev: HEAD
     depth: 1
